plugins {
    id 'java'
    id 'application'
}

group = 'com.t03g06'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.mockito:mockito-core:3.7.7'
    implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
}

test {
    useJUnitPlatform()
}

application {
    mainClass.set("com.t03g06.Game")
}